--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,7 @@ body{
   -moz-osx-font-smoothing: grayscale;
 }
 
-.footer-line {
-  position:absolute;
-  width: 100%;
-  height:4px;
-  bottom:0;
-  left:0;right:0;
-  margin-top:5px;
-  z-index: 5;
-  border-radius: 0 0 5px 5px;
-  background: linear-gradient(90deg, rgb(199, 13, 13), rgb(196, 196, 11), rgb(11, 207, 11), rgb(11, 201, 207), rgb(40, 11, 207), rgb(191, 11, 207), rgb(207, 11, 76))
+#root {
+  position: relative;
 }
 
