--- a/src/components/stylesheets/navbar.css
+++ b/src/components/stylesheets/navbar.css
@@ -1,6 +1,10 @@
 nav {
-    padding: 10px;
-    background: #9c27b0;
+    padding: 5px;
+    position: fixed;
+    bottom: 0;
+    width:100%;
+    border-top: 1px solid #eee;
+    z-index: 2;
 }
 
 nav ul {
@@ -12,19 +16,63 @@ nav ul {
     padding: 10px
 }
 
-nav ul li a{
+nav ul li{
     width: 100px;
-    padding: 10px;
-    background: #3d0048;
+    padding: 5px;
     border-radius: 5px;
     margin: 0 10px;
     text-align: center;
     font-size:25px;
     font-weight: bold;
-    color :#FFF;
     transition: all .3s linear;
+    color :#FFF;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    cursor: pointer
 }
 
-nav ul li a:hover {
-    color: #9c27b0
+nav ul li a {
+    text-decoration: none;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
 }
+
+nav ul li a:hover{
+    color: #FFF
+}
+
+nav ul li.add {
+    background: #eee;
+    color: #131010;
+    position: relative;
+    border-radius: 10px;
+    font-weight: bold;
+}
+
+
+nav ul li.add::after,
+nav ul li.add::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    display: block;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
+
+nav ul li.add::after {
+    left: -5px;
+    background: #ee2318;
+}
+nav ul li.add::before {
+    background: #56f2ff;
+    right: -5px;
+}
+
+
+
